fix(facets): PRTL-290 not cutoff anymore in ff&ie (#1090)
Closes #PRTL-290

--- a/app/scripts/components/facets/styles/facets.less
+++ b/app/scripts/components/facets/styles/facets.less
@@ -13,6 +13,7 @@
   label {
     margin: 0;
   }
+
 }
 
 .current-filters {
@@ -119,6 +120,10 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+
+  label {
+    display: inline;
+  }
 }
 
 .list-group-item-text {
